--- a/Jogo de Burro/src/jogodeburro/JogoBurro.form
+++ b/Jogo de Burro/src/jogodeburro/JogoBurro.form
@@ -127,6 +127,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Jogar Carta"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonCartaP1ActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="jButtonComprarP2">
       <Properties>
